--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,14 @@ font-family: 'Tinos', serif;
 	box-sizing: border-box;
 }
 
+
+
 .background{
-	/*background: url('../images/background.jpg');*/
+
+	background-color: #000;
+	background: url('../images/background.png');
+	
+
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -24,19 +30,27 @@ font-family: 'Tinos', serif;
 	height: 100vh;
 
 }
-
 .background .content{
-	padding-top: 180px;
+	padding-top: 100px;
 	max-width: 1200px;
 	margin: 0 auto;
 	text-align: center;
+
+}
+
+
+
+.background .content .container{
+	padding: 50px;
+	background-color: rgb(255,255,255,0.6);
+	border-radius: 30px
 }
 
 
 .background .content h1{
 	font-family: 'Tinos', serif;
 	text-transform: uppercase;
-	font-size: 90px;
+	font-size: 100px;
 	color: #AB2025;
 } 
 
@@ -84,14 +98,23 @@ font-family: 'Tinos', serif;
 		max-width: 768px;
 	}
 
+	.background .content .container{
+	padding: 0px;
+
+}
+
 
 }
 
 
 @media only screen and (max-width: 550px) and (max-height: 900px) {
 	.background .content{
-		padding-top: 100px;
+		padding-top: 10px;
 	}
+	.background .content .container{
+	padding: 60px 0;
+
+}
 
 	.background .content h1{
 		font-size: 50px;
