--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,7 @@ font-family: 'Tinos', serif;
 
 	background-color: #000;
 	background: url('../images/background.png');
-	
-
 	background-size: cover;
-	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center;
 	width: 100%;
@@ -31,18 +28,19 @@ font-family: 'Tinos', serif;
 
 }
 .background .content{
-	padding-top: 100px;
+	padding-top: 75px;
 	max-width: 1200px;
 	margin: 0 auto;
 	text-align: center;
-
 }
 
 
 
 .background .content .container{
 	padding: 50px;
-	background-color: rgb(255,255,255,0.6);
+	background-color: rgb(24,23,68,0.94);
+	/*background-color: rgb(171,32,37,0.95);*/
+	/*background-color: rgb(193,149,65,0.95);*/
 	border-radius: 30px
 }
 
@@ -50,8 +48,10 @@ font-family: 'Tinos', serif;
 .background .content h1{
 	font-family: 'Tinos', serif;
 	text-transform: uppercase;
-	font-size: 100px;
-	color: #AB2025;
+	font-size: 120px;
+	/*color: #AB2025;*/
+	/*color: rgb(24,23,68);*/
+	color: #C19541;
 } 
 
 .background .content hr{
@@ -65,16 +65,20 @@ font-family: 'Tinos', serif;
 
 .background .content h2{
 	font-family: 'Tinos', serif;
-	font-size: 45px;
+	font-size: 55px;
 	font-weight: 300px;
 	margin-top: 30px;
 	color: #C19541;
+	/*color: rgb(171,32,37);*/
 } 
 
 .background .content .company-icons .icon{
 	width: 230px;
 	margin: 0 20px;
+	margin-top: 15px;
 	display: inline-block;
+	background-color: rgb(255,255,255,0.8);
+	border-radius: 20px;
 } 
 
 .background .content .company-icons img{
@@ -92,41 +96,99 @@ font-family: 'Tinos', serif;
 	transition: 0.5s ease;
 } 
 
-
-@media only screen and (min-width: 551px) and (max-width: 1100px){
+@media only screen and (min-width: 961px) {
 	.background .content{
-		max-width: 768px;
+		padding-top: 75px;
 	}
 
 	.background .content .container{
-	padding: 0px;
-
-}
-
-
-}
-
-
-@media only screen and (max-width: 550px) and (max-height: 900px) {
-	.background .content{
-		padding-top: 10px;
+		padding: 50px;
 	}
-	.background .content .container{
-	padding: 60px 0;
 
+
+	.background .content h1{
+		font-size: 120px;
+	} 
+
+	.background .content h2{
+		font-size: 55px;
+	} 
+
+	.background .content .company-icons .icon{
+		width: 230px;
+		margin: 0 20px;
+		margin-top: 15px;
+	} 
 }
+
+@media only screen and (max-width: 960px) and (max-width: 721px) {
+ 	.background .content{
+		padding-top: 75px;
+	
+	}
+
+	.background .content .container{
+		padding: 60px;//
+
+	}
+
+	.background .content .company-icons .icon{
+		width: 180px;//
+		margin: 0 20px;
+		margin-top: 15px;
+		display: inline-block;
+		background-color: rgb(255,255,255,0.8);
+		border-radius: 20px;
+	} 
+}
+
+@media only screen and (max-width: 720px) and (min-width: 351px) {
+ 	.background .content{
+		padding-top: 35px;
+	}
+
+	.background .content .container{
+		padding: 30px;
+	}
+
+
+	.background .content h1{
+		font-size: 70px;
+	} 
+
+	.background .content h2{
+		font-size: 45px;
+	} 
+
+	.background .content .company-icons .icon{
+		width: 125px;
+		margin: 0 5px;
+		margin-top: 15px;
+	} 
+}
+
+@media only screen and (max-width: 350px) {
+ 	.background .content{
+		padding-top: 35px;
+	}
+
+	.background .content .container{
+		padding: 30px;
+	}
+
 
 	.background .content h1{
 		font-size: 50px;
 	} 
 
 	.background .content h2{
-		font-size: 30px;
+		font-size: 35px;
 	} 
 
 	.background .content .company-icons .icon{
-		width: 118px;
+		width: 90px;
+		margin: 0 5px;
+		margin-top: 15px;
 	} 
-
-
 }
+
